# agents

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
crew-ai/: requirements.txt
crew-ai/job-application-md/: job_application_crew.py
crew-ai/job-application-md/config/: agents.yaml  tasks.yaml
crew-ai/job-application-pdf/: README.md  job_application_crew.py
crew-ai/job-application-pdf/config/: tasks.yaml
crew-ai/write_a_book_with_flows/src/write_a_book_with_flows/: main.py
crew-ai/write_a_technical_blog/: .gitignore  README.md  pyproject.toml
crew-ai/write_a_technical_blog/src/write_a_technical_blog/: main.py
google-adk/agents-planner/: README.md  agents-planner-agent.py  constants.py  requirements.txt  utils.py
google-adk/agents-planner/agents_planner/modules/: constants.py
google-adk/agents-planner/sub_agents/agent_designer/: agent.py  prompt.py
google-adk/agents-planner/sub_agents/final_description/: agent.py  prompt.py
google-adk/agents-planner/sub_agents/task_analyzer/: agent.py  prompt.py
smolagents/technical_blog_smolagents/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
smolagents/technical_blog_smolagents/src/technical_blog_smolagents/: __init__.py  main.py
smolagents/technical_blog_smolagents/src/technical_blog_smolagents/agents/: __init__.py  blog_planning_agent.py  blog_writing_agent.py
smolagents/technical_blog_smolagents/src/technical_blog_smolagents/models/: __init__.py
smolagents/technical_blog_smolagents/src/technical_blog_smolagents/tools/: __init__.py  blog_tools.py
(+10 files in other folders)
