[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "technical_blog_smolagents"
version = "0.1.0"
description = "A multi-agent system for technical blog writing using smolagents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "smolagents",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]

[project.scripts]
technical-blog = "technical_blog_smolagents.main:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
